# claude-config-manager

./: .gitignore  CLAUDE.md  README.md  generate-icons.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-hybrid-example.yml  release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
